--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
+    "nodemailer": "^6.10.0",
     "tsconfig-paths": "^4.2.0",
     "yup": "^1.6.1"
   },
@@ -36,6 +37,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
+    "@types/nodemailer": "^6.4.17",
     "@types/yup": "^0.29.14",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
